stremio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: ingress-nginx
    cert-manager.io/issuer: "cluster-issuer-selfsigned" 
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  tls:
    - hosts:
        - stremio.k3s
      secretName: wildcard.k3s.cloud-tls
  rules:
  - host: stremio.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio
            port:
              name: http
status:
  loadBalancer:
    ingress:
      - hostname: 192.168.64.6
